# Sphinx

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_EN.md  README_PT.md  build.sh  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  rules.yml  sphinx.db
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linting.yml  tests.yml
app/: __main__.py
app/adapters/gateways/: gemini.py  prometheus.py  sqlite.py  yaml_rules.py
app/adapters/providers/: terraform.py
app/core/application/: state.py
app/core/application/ports/: gateways.py  providers.py
app/core/application/ports/gateways/: history.py  llm.py  observability.py  rules.py  workspace.py
app/core/application/ports/providers/: iac_provider.py
app/core/application/use_cases/: apply_changes.py  build_config.py  create_plan.py  fetch_metrics.py  generate_iac.py  record_action.py  run_analysis.py  view_history.py  workspaces.py
app/core/domain/models/: history.py  iac.py  observability.py  optimization.py  rules.py  workspace.py
app/core/domain/services/: anomalies.py
app/core/plugins/: interfaces.py  manager.py
app/infrastructure/: cli.py
app/infrastructure/config/: settings.py  simulation.py
app/infrastructure/di/: containers.py
app/infrastructure/tui/: app.py  log_handler.py
app/infrastructure/tui/assets/: style.css
app/infrastructure/tui/screens/: chat.py  dashboard.py  history.py  workspace.py
app/infrastructure/tui/widgets/: log.py  metric_chart.py  opportunities.py  solution.py
plugins/: aws_ebs_optimizer.py  example_memory_rule.py
src/sphinx/: __main__.py
src/sphinx/adapters/gateways/: db_sqlite.py  llm_gemini.py  obs_prometheus.py
src/sphinx/core/application/use_cases/: apply_infrastructure_changes.py  create_execution_plan.py  create_optimization_plan.py  fetch_metrics.py  generate_iac.py  record_action.py
src/sphinx/core/domain/models/: history.py  iac.py  optimization.py
src/sphinx/core/domain/services/: anomaly_detection.py
src/sphinx/infrastructure/: cli.py
src/sphinx/infrastructure/config/: settings.py
src/sphinx/infrastructure/di/: containers.py
src/sphinx/infrastructure/tui/: app.py
src/sphinx/infrastructure/tui/screens/: chat_screen.py  (+1 more)
tests/e2e/: test_full_chat_flow.py
tests/integration/adapters/gateways/: test_prometheus_gateway.py
tests/integration/adapters/providers/: test_terraform_adapter.py
(+11 files in other folders)
