# pyproject.toml

[tool.poetry]
name = "sphinx-platform"
version = "0.1.0"
description = "Autonomous cloud engineering platform within the terminal."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sphinx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["rich"], version = "^0.9.0"}
dependency-injector = "^4.41.0"
textual = "^0.56.0"
google-generativeai = "^0.5.2"
pydantic = "^2.7.0"
prometheus-api-client = "^0.6.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"
textual-dev = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
strict = true
python_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]